# ChangeLog for media-gfx/nwdiag
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -nwdiag-0.2.3.ebuild,
  nwdiag-0.2.7.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.2.7.ebuild:
  Keyworded amd64.

*nwdiag-0.3.0 (20 Jul 2011)

  20 Jul 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.3.0.ebuild:
  Version bump [441].

*nwdiag-0.2.7 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.2.7.ebuild,
  metadata.xml:
  Version bump [424].

  16 Jun 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.2.3.ebuild:
  Keyworded x86.

  15 Jun 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.2.3.ebuild:
  Keyworded amd64.

  20 May 2011; James Rowe <jnrowe@gmail.com> +watch:
  Added missing watch file for nwdiag.

  18 May 2011; James Rowe <jnrowe@gmail.com> nwdiag-0.2.3.ebuild:
  Keyworded ~x86.

*nwdiag-0.2.3 (16 May 2011)

  16 May 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.2.3.ebuild,
  +metadata.xml:
  Initial ebuild, by me [363].
