@@ -3,15 +3,17 @@ Hash: SHA512
 
 DIST nwdiag-0.2.7.tar.gz 22563 RMD160 fabcaf736e3a0e8f9ba8efca4c472013c4036f61 SHA1 f01f8b9e9a6808c5461f8fdec12b5d55338fdd47 SHA256 17daa81fc306ea2057e56175a6801e9049153ac52e1cf2ee8a4d61dffc4ccc69
 DIST nwdiag-0.3.0.tar.gz 23367 RMD160 d41e8ba7eb3f7292f0a5f01c46fcba1aa62d0c61 SHA1 8aa1d221c36da9e78f1597a123207d702800b624 SHA256 fca4d430a6f5e606bb564b83b12403b535247ed7a906c1f10182085183e5ba6e
+DIST nwdiag-0.4.0.tar.gz 23923 RMD160 8962b13bbcfd1a664c391f5f82dc736546061b0e SHA1 ed16ad2286113f9a25534b048088e82a21e2b6db SHA256 06803c87cd82faab3e3edd7f369faad4921c789f92875e544f7b3e8b247d6ae6
 EBUILD nwdiag-0.2.7.ebuild 1217 RMD160 44e0e5851e7702f07be02c3d60d6cd5e2b2edfab SHA1 37b49c6a849dcee6f27276e01d8a8a850f7927c8 SHA256 b336ebdfa170eb330803a3d5ae9e4be9fbbe019c98320c29858b29cd706885ef
 EBUILD nwdiag-0.3.0.ebuild 1219 RMD160 aa56c242ed938afa88c786c9f414371429d31493 SHA1 d0f82a68c8ff51fa37db9d59935014db90501140 SHA256 6dac82b317da8cf7571cd9ebb96400187176aaa33605f067424028ff624746df
-MISC ChangeLog 1058 RMD160 6378a910cd97497143803d058d4cd2b607771f21 SHA1 f01f2bf84f395807e642f6692cac0e6272641a0e SHA256 e207ab05ff9f77ab712fa2a4729875cd43b41b1ba43c7d78fab9a71eb7be8187
+EBUILD nwdiag-0.4.0.ebuild 1219 RMD160 e5aa2618e0a04e55974fd1594efc860c0d0dd9ab SHA1 3500a84407c927583a9adae496ba2b13b6188441 SHA256 db6aae01ede7476274c29bc2057505e9198a75dc05c31a91c408ee1205945fec
+MISC ChangeLog 1177 RMD160 bb9a36741a5e8474ef0d84fd9df25aa79c99419a SHA1 52d49541e2222f37296c258a7493623aaa140090 SHA256 59e0f5af3b07565f6b8991ef28ce9423420447f756a9bd8250449fbd49cd259d
 MISC metadata.xml 631 RMD160 167b3912512770a0117b6922c4c6ef09d92938dd SHA1 92fc457161b5e1f582a6ce6b1330b057c27a5fca SHA256 0e3eed943b7433991e30eeeb7cb89cdf0fa058dd2bedf794317f7d5a0fc08250
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk5ASAYACgkQzJrj3cAXR0lqawCfXl3/1R4zlYaKBAcHr7zUQnnG
-k+YAoI9pEJ7stBHoWi1IdAfFuSdDKqXM
-=4Bez
+iEYEAREKAAYFAk5NbJoACgkQzJrj3cAXR0lrFACgs5R2REAyk8wFigu3c1r3KKJb
+Mq4An2UhapN6repU9eoAV5gE+QGgW16u
+=rvEv
 -----END PGP SIGNATURE-----
