@@ -1,0 +1,22 @@
+dev-python/setuptools >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+dev-python/setuptools dev-python/funcparserlib dev-python/imaging >=media-gfx/blockdiag-0.8.7 !minimal? ( dev-python/sphinx ) >=app-admin/eselect-python-20091230 || ( =dev-lang/python-2.7* =dev-lang/python-2.6* =dev-lang/python-2.5* )
+0
+mirror://pypi/n/nwdiag/nwdiag-0.4.0.tar.gz
+
+http://pypi.python.org/pypi/nwdiag/
+Apache-2.0
+Generate network-diagram images from spec-text file
+~amd64 ~x86
+distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
+examples minimal
+
+
+
+3
+
+compile install postinst postrm prepare
+
+
+
+
+
