@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*nwdiag-0.4.0 (18 Aug 2011)
+
+  18 Aug 2011; James Rowe <jnrowe@gmail.com> +nwdiag-0.4.0.ebuild:
+  Version bump [447].
+
   08 Aug 2011; James Rowe <jnrowe@gmail.com> -nwdiag-0.2.3.ebuild,
   nwdiag-0.2.7.ebuild:
   Keyworded x86.
